# gofigr-python

./: .editorconfig  .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  README.rst  build_pyodide_wheel.sh  make_docs.sh  package.json  pylintrc  pyproject.toml  run_failed_tests.sh  run_lints.sh
.github/workflows/: ci.yml  release.yml
docs/: SECRETS_CHECKER.md
docs/source/: boilerplate.rst  conf.py  customization.rst  gofigr.rst  index.rst  library_support.rst  organization.rst  start.rst  tips.rst
examples/: script_example.py  tsne_example.py
gofigr/: __init__.py  annotators.py  cleanroom.py  compat.py  context.py  databricks.py  gfconfig.py  jupyter.py  listener.py  models.py  profile.py  proxy.py  publisher.py  pyodide.py  reproducible.py  resolver.py  short_id.py  trap.py  utils.py  watermarks.py  widget.py
gofigr/backends/: __init__.py  matplotlib.py  plotly.py  plotnine.py  py3dmol.py
gofigr/lite/: __init__.py
gofigr/resources/: copy_image.js  loader.py  reproducible_widget.js
scripts/: setup-pre-commit.sh
src/: index.ts
tests/: conftest.py  test_cleanroom.py  test_client.py  test_deferred_sync.py  test_invites.py  test_metadata.py  test_models.py  test_pyodide.py  test_reproducible.py  test_request.py  test_short_id.py  test_watermarks.py
tests/integration/: config.json  config_small.json  integration_tests.ipynb  jupyter_driver.py  lite_tests.ipynb  report.py  run_compatibility.py  run_one.sh
tests/integration/environments/: p38n.txt
tests/jupyter/: conftest.py  harness.py  test_auto_publish.py  test_deferred_sync.py  test_resolver.py
