# pyproject.toml

[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "gofigr"
version = "2.1.0"
description = "GoFigr client library"
readme = "README.md"
authors = [{ name = "Maciej Pacula", email = "maciej@gofigr.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["science", "visualization", "version control", "plotting", "data", "reproducibility"]
dependencies = [
    "numpy", "pandas", "pyarrow", "pyqrcodeng", "pillow", "matplotlib", "dateutils",
    "python-dateutil", "ipython", "requests", "pypng", "plotly", "kaleido",
    "humanize", "blake3", "GitPython", "ipywidgets>=8.1.0",
    "anywidget>=0.9.0", "traitlets"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools", "bumpver", "build", "twine", "pylint<4.0.0", "flake8", "sphinx", "sphinx_rtd_theme",
       "sphinxcontrib-jquery", "seaborn", "matplotlib", "tqdm", "selenium", "webdriver-manager", "openpyxl",
       "py3Dmol", "html2image", "teamcity-messages", "plotnine", "hatch", "hatchling"]

databricks = ["databricks-sdk"]

[project.urls]
Homepage = "https://www.gofigr.io"
Documentation = "https://gofigr.io/docs/gofigr-python/2.1.0/"

[project.scripts]
gfconfig = "gofigr.gfconfig:main"

[tool.bumpver]
current_version = "2.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.hatch.build]
exclude = [
     "venv",
    "**/venv",
    "build",
]

[tool.hatch.version]
path = "version.txt"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.sdist]
exclude = [".github", "binder", "venv"]

[tool.hatch.build.hooks.version]
path = "gofigr/_version.py"

[tool.check-wheel-contents]
ignore = ["W002"]


[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
    'gofigr-python/{version}/'
]

"version.txt" = [
    '{version}'
]

"docs/source/conf.py" = [
    "release = '{version}'"
]

"docs/source/index.rst" = [
    "{version}"
]
